--- a/config/config.json
+++ b/config/config.json
@@ -1,12 +1,6 @@
 {
     "XFLOOR_VERSION": "1.0.0",
-    "URL_LIST": [
-        "https://www.google.com",
-        "https://www.facebook.com",
-        "https://www.youtube.com",
-        "https://www.twitter.com",
-        "https://www.instagram.com",
-        "https://www.linkedin.com",
-        "https://www.pinterest.com"
-    ]
+    "URL_LIST": {
+        "R18": "https://www.r18.dev/"
+    }
 }
